Finished web build

--- a/web/minshell.html
+++ b/web/minshell.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <title>raylib web game</title>
+    <title>Fluid Simulator</title>
 
-    <meta name="title" content="raylib web game">
-    <meta name="description" content="New raylib web videogame, developed using raylib videogames library">
+    <meta name="title" content="Fluid Simulator">
+    <meta name="description" content="Basic CPU eulerian grid-based fluid Simulator">
     <meta name="keywords" content="raylib, programming, examples, html5, C, C++, library, learn, games, videogames">
     <meta name="viewport" content="width=device-width">
 
@@ -35,7 +35,7 @@
 
     <style>
         body { margin: 0px; overflow: hidden; background-color: black; }
-        canvas.emscripten { border: 0px none; background-color: black; }
+        canvas.emscripten { border: 2px solid white; border-radius: 10px; background-color: black; }
     </style>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
     <script type='text/javascript'>
